--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.1'
 services:
   ecommerce-mysql:
     image: mysql
-    restart: always
+#    restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 'password'
     ports:
