--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,12 +5,12 @@ spring:
   application:
     name: SportsCenter
   datasource:
-    url: jdbc:mysql://localhost:3306/sportscenter
+    url: jdbc:mysql://localhost:3306/sports-center
     username: root
-    password: admin
+    password: password
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
       naming:
         # Keeping the same name with the entity
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
