--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,10 +4,13 @@ server:
 spring:
   application:
     name: SportsCenter
+  config:
+    import:
+      - optional:classpath:env.properties
   datasource:
     url: jdbc:mysql://localhost:3306/sports-center
-    username: root
-    password: password
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: none
