--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,17 @@
     "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.9",
     "@mui/icons-material": "^7.3.5",
+    "@mui/lab": "^7.0.1-beta.20",
     "@mui/material": "^7.3.5",
+    "@paralleldrive/cuid2": "^3.0.4",
+    "@reduxjs/toolkit": "^2.11.1",
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
